--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.5.2",
     "@ionic-native/splash-screen": "4.5.2",
-    "@ionic-native/status-bar": "4.5.2",
+    "@ionic-native/status-bar": "^4.5.2",
     "@ionic/storage": "2.1.3",
     "cordova-android": "~6.3.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -47,7 +48,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "android"
