--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "moment": "^2.20.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.7",
+    "@ionic/app-scripts": "3.1.8",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
