--- a/package.json
+++ b/package.json
@@ -20,17 +20,24 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
-    "@ionic-native/core": "4.5.2",
-    "@ionic-native/splash-screen": "4.5.2",
-    "@ionic-native/status-bar": "^4.5.2",
+    "@ionic-native/core": "4.5.3",
+    "@ionic-native/fcm": "4.5.3",
+    "@ionic-native/screenshot": "^4.5.3",
+    "@ionic-native/social-sharing": "^4.5.3",
+    "@ionic-native/splash-screen": "4.5.3",
+    "@ionic-native/status-bar": "4.5.3",
     "@ionic/storage": "2.1.3",
     "chart.js": "^2.7.1",
+    "com.darktalker.cordova.screenshot": "^0.1.6",
     "cordova-android": "~6.3.0",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-x-socialsharing": "^5.3.1",
+    "es6-promise-plugin": "^4.1.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -51,7 +58,10 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-fcm": {},
+      "cordova-plugin-x-socialsharing": {},
+      "com.darktalker.cordova.screenshot": {}
     },
     "platforms": [
       "android"
