--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bollettemanager",
-  "version": "0.0.1",
+  "version": "1.2.6",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
@@ -20,18 +20,17 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
-    "@ionic-native/core": "4.5.3",
-    "@ionic-native/fcm": "4.5.3",
-    "@ionic-native/screenshot": "^4.5.3",
-    "@ionic-native/social-sharing": "^4.5.3",
-    "@ionic-native/splash-screen": "4.5.3",
-    "@ionic-native/status-bar": "4.5.3",
+    "@ionic-native/core": "4.6.0",
+    "@ionic-native/fcm": "4.6.0",
+    "@ionic-native/screenshot": "4.6.0",
+    "@ionic-native/social-sharing": "4.6.0",
+    "@ionic-native/splash-screen": "4.6.0",
+    "@ionic-native/status-bar": "4.6.0",
     "@ionic/storage": "2.1.3",
     "chart.js": "^2.7.1",
     "com.darktalker.cordova.screenshot": "^0.1.6",
     "cordova-android": "~6.3.0",
     "cordova-plugin-device": "^1.1.4",
-    "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.4.1",
@@ -59,7 +58,6 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-fcm": {},
       "cordova-plugin-x-socialsharing": {},
       "com.darktalker.cordova.screenshot": {}
     },
