--- a/package.json
+++ b/package.json
@@ -20,23 +20,31 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
-    "@ionic-native/core": "4.6.0",
-    "@ionic-native/fcm": "4.6.0",
-    "@ionic-native/screenshot": "4.6.0",
-    "@ionic-native/social-sharing": "4.6.0",
-    "@ionic-native/splash-screen": "4.6.0",
-    "@ionic-native/status-bar": "4.6.0",
+    "@ionic-native/core": "4.7.0",
+    "@ionic-native/fcm": "4.7.0",
+    "@ionic-native/google-plus": "^4.7.0",
+    "@ionic-native/screenshot": "4.7.0",
+    "@ionic-native/social-sharing": "4.7.0",
+    "@ionic-native/splash-screen": "4.7.0",
+    "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
+    "angularfire2": "^5.0.0-rc.6.0",
     "chart.js": "^2.7.1",
     "com.darktalker.cordova.screenshot": "^0.1.6",
     "cordova-android": "~6.3.0",
+    "cordova-plugin-browsertab": "^0.2.0",
+    "cordova-plugin-buildinfo": "^2.0.1",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-inappbrowser": "^2.0.2",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-plugin-x-socialsharing": "^5.3.1",
+    "cordova-universal-links-plugin": "^1.2.1",
     "es6-promise-plugin": "^4.1.0",
+    "firebase": "^4.12.1",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -59,7 +67,11 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-x-socialsharing": {},
-      "com.darktalker.cordova.screenshot": {}
+      "com.darktalker.cordova.screenshot": {},
+      "cordova-universal-links-plugin": {},
+      "cordova-plugin-buildinfo": {},
+      "cordova-plugin-browsertab": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android"
