--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/fcm": "4.7.0",
+    "@ionic-native/firebase": "^4.7.0",
     "@ionic-native/google-plus": "^4.7.0",
     "@ionic-native/screenshot": "4.7.0",
     "@ionic-native/social-sharing": "4.7.0",
@@ -36,12 +37,14 @@
     "cordova-plugin-buildinfo": "^2.0.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-firebase": "^1.0.0",
     "cordova-plugin-inappbrowser": "^2.0.2",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-plugin-x-socialsharing": "^5.3.1",
+    "cordova-sqlite-storage": "^2.3.0",
     "cordova-universal-links-plugin": "^1.2.1",
     "es6-promise-plugin": "^4.1.0",
     "firebase": "^4.12.1",
@@ -71,7 +74,9 @@
       "cordova-universal-links-plugin": {},
       "cordova-plugin-buildinfo": {},
       "cordova-plugin-browsertab": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-firebase": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
